<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">寓见</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 客房列表-客房描述 -->
    <string name="str_apartment_address_desc">%1$s-%2$s-%3$s\t\t%4$s房间</string>
    <string name="str_apartment_area_desc">%1$sm²-朝%2$s-%3$s室-%4$s层</string>
    <string name="str_apartment_italic">/</string>
    <string name="str_house_price_suffix">元/月</string>
    <string name="str_filter">条件筛选</string>
    <string name="str_top_hint_msg">请输入地标,商圈,景点</string>

    <!-- 客房详情 -->
    <string name="str_house_detail_house_des">%1$s\n【%2$s-%3$s】</string>
    <string name="str_house_detail_house_general">房屋概况</string>
    <string name="str_house_detail_house_basic_info">房屋基本情况</string>
    <string name="str_tel">咨询电话</string>
    <string name="str_address">地址</string>
    <string name="str_map">地图</string>
    <string name="str_public_facilities">公共设施</string>
    <string name="str_order_table">预约看房</string>
    <string name="str_house_detail_default_desc">宜家风～增wifi~定期保洁～年轻人自己的家</string>
    <string name="str_format_house_type">元/月\t\t%1$s房</string>
    <string name="str_format_house_area_desc">%1$sm²\t%2$s室-%3$s层</string>
    <string name="str_format_house_condition">%1$s房间\t\t朝%2$s\t\t%3$s㎡</string>
    <string name="str_bus">公交</string>
    <string name="str_metro">地铁</string>
    <string name="str_market">商场</string>
    <string name="str_hospital">医院</string>
    <string name="str_entertainment">娱乐</string>
    <string name="str_restaurant">餐饮</string>

    <!-- list refresh and load -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">点击查看更多</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_load_no_data">没有更多数据</string>

    <!-- 登录页面 -->
    <string name="str_input_username">请输入用户名</string>
    <string name="str_input_password">请输入密码</string>
    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="str_personal_info_test">Hello\n男\t25岁\t上海\t徐汇区</string>

    <!-- 客房详情label -->
    <string name="str_free_wifi">免费wifi</string>
    <string name="str_deep_clear">深度保洁</string>
    <string name="str_renter_approve">租客认证</string>
    <string name="str_timely_fix">及时维修</string>
    <string name="str_safety_protection">一客一锁</string>
    <string name="str_quality_zone">品质空间</string>

    <!-- 加载dialog弹出消息 -->
    <string name="str_loading_error_message">加载错误</string>
    <string name="str_loading_message">正在加载</string>

    <!-- another pull to refresh listview string -->
    <string name="double_click_exit">再次点击返回键退出</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refresh">松手立即刷新</string>
    <string name="app_list_loading">正在加载</string>
    <string name="app_list_refresh_done">刷新完成</string>
    <string name="str_seniro_search">高级搜索</string>

    <!-- confirm call dialog -->
    <string name="str_confirm_call">是否确认拨打电话</string>
    <string name="str_confirm">确定</string>
    <string name="str_cancel">取消</string>

    <!-- 高级搜索 -->
    <string name="str_area">区域</string>
    <string name="str_rent">租金</string>

</resources>