<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layout_fill_parent"
    android:background="@color/bg_house_detail" >

    <include
        android:id="@+id/include_house_list"
        layout="@layout/comm_search_top" />

    <com.xiaoyu.rentingdemo.widget.MyScrollView
        style="@style/layout_fill_parent"
        android:layout_below="@id/include_house_list"
        android:layout_marginBottom="47dp"
        android:scrollbars="none" >

        <LinearLayout
            style="@style/layout_fill_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical" >

            <include
                android:id="@+id/include_house_detail_viewpager"
                layout="@layout/layout_comm_viewpager" />

            <TextView
                android:id="@+id/tv_house_detail_desc"
                style="@style/layout_wrap_content"
                android:lineSpacingExtra="@dimen/medium_padding"
                android:paddingLeft="@dimen/standard_padding"
                android:paddingTop="@dimen/small_padding"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_large_text"
                android:textStyle="bold" />

            <View style="@style/style_horizontal_line" />

            <LinearLayout
                android:id="@+id/rl_house_detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/standard_padding" >

                    <TextView
                        android:id="@+id/tv_house_detail_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_house_detail_price"
                        android:textSize="@dimen/medium_text" />

                    <TextView
                        android:id="@+id/tv_house_detail_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/tv_house_detail_price" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/standard_padding" >

                    <ImageView
                        android:id="@+id/iv_house_detail_address_icon"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        android:background="@drawable/icon_map" />

                    <TextView
                        android:id="@+id/tv_house_detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iv_house_detail_address_icon"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text" />
                </RelativeLayout>

                <com.xiaoyu.rentingdemo.widget.DashedLine style="@style/style_house_detail_dashedline" />

                <LinearLayout
                    android:id="@+id/ll_house_detail_room_feature"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <com.xiaoyu.rentingdemo.widget.DashedLine style="@style/style_house_detail_dashedline" />
                <!-- <标签加入> -->

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/standard_padding"
                    android:paddingRight="@dimen/standard_padding" >

                    <ImageView
                        android:id="@+id/iv_house_detail_public_facilities_icon"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:background="@drawable/icon_star" />

                    <TextView
                        android:id="@+id/tv_house_detail_public_facilities"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/iv_house_detail_public_facilities_icon"
                        android:text="@string/str_public_facilities" />

                    <TextView
                        android:id="@+id/tv_house_detail_public_facilities_content"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_house_detail_public_facilities_icon"
                        android:paddingBottom="@dimen/standard_padding"
                        android:paddingTop="@dimen/small_padding" />
                </RelativeLayout>

                <TextView
                    style="@style/style_house_detail_red_title"
                    android:background="@color/gray"
                    android:text="@string/str_map" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/standard_padding" >

                    <com.xiaoyu.rentingdemo.widget.ScaleImageView
                        android:id="@+id/siv_house_detail_map_image"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </com.xiaoyu.rentingdemo.widget.MyScrollView>

    <RelativeLayout
        android:id="@+id/rl_house_detail_bottom"
        android:layout_width="fill_parent"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_color_title"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/iv_house_detail_tel"
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_call" />

        <TextView
            style="@style/layout_wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_house_detail_tel"
            android:text="@string/str_order_table"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>